--- a/sass/pages/_page-blog.scss
+++ b/sass/pages/_page-blog.scss
@@ -1,13 +1,13 @@
-.root_blog {
-  #main {height: 100%}
-}
-
-#page_blog {display: flex;flex-direction: column;height: 100%;position: relative;
-  #header {background: transparent;box-shadow: none}
-  .page_body {flex: 1}
-  .blog_lst {}
-  .blog_item {}
-  .blog_item__thumb {display: block;position: absolute;top: 0;
-    img {}
-  }
-}
+//.root_blog {
+//  #main {height: 100%}
+//}
+//
+//#page_blog {display: flex;flex-direction: column;height: 100%;position: relative;
+//  #header {background: transparent;box-shadow: none}
+//  .page_body {flex: 1}
+//  .blog_lst {}
+//  .blog_item {}
+//  .blog_item__thumb {display: block;position: absolute;top: 0;
+//    img {}
+//  }
+//}
