--- a/twig/page/product-detail.twig
+++ b/twig/page/product-detail.twig
@@ -8,10 +8,10 @@
             <div class="container">
                 <div class="product_detail__container">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-lg-7 col-xl-6">
                             {% include '../components/gallery.twig' %}
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-5 col-xl-6">
                             <div class="product_detail__box">
                                 <h1 class="product_detail__name">
                                     Bàn Gấp Dã Ngoại - C01
