--- a/sass/component/_gallery.scss
+++ b/sass/component/_gallery.scss
@@ -1,17 +1,26 @@
-.product_gallery {
-  .gallery-top {height: 100%;width: 100%;border: solid 1px $color-text;
+.product_gallery {display: flex;align-items: center;margin-bottom: 30px;height: auto;
+  .swiper-container {  width: 100%;height: 100%;margin-left: auto;margin-right: auto;}
+  .gallery-top {height: 100%;width: 100%;border: solid 1px $color-text;flex: 1;
     .swiper-slide {position: relative;
       &::before {content: '';display: block;padding-top: 100%}
       img {@include responsive-ratio-img()}
     }
   }
 
-  .gallery-thumbs {height: 20%;box-sizing: border-box;padding: 10px 0;}
-
+  .gallery-thumbs {height: 100%;box-sizing: border-box;width: 100px;margin: 0 15px 0 0;display: none}
   .gallery-thumbs .swiper-slide {height: 100%;opacity: 0.4;position: relative;border: solid 1px $color-text;
     &::before {content: '';display: block;padding-top: 100%}
     img {@include responsive-ratio-img()}
   }
 
   .gallery-thumbs .swiper-slide-thumb-active {opacity: 1;}
+}
+
+@media (min-width: $bp-md) {
+  .product_gallery {margin-bottom: 30px;height: 440px;
+    .gallery-thumbs {display: block}
+  }
+}
+@media (min-width: $bp-l) {
+  .product_gallery {margin-bottom: 0}
 }
