--- a/twig/components/gallery.twig
+++ b/twig/components/gallery.twig
@@ -1,4 +1,13 @@
 <div class="product_gallery">
+    <div class="swiper-container gallery-thumbs">
+        <div class="swiper-wrapper">
+            {% for i in 0..3 %}
+                <div class="swiper-slide">
+                    <img src="http://via.placeholder.com/300x300" alt=""/>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
     <div class="swiper-container gallery-top">
         <div class="swiper-wrapper">
             {% for i in 0..3 %}
@@ -10,14 +19,7 @@
         <!-- Add Arrows -->
         <div class="swiper-button-next swiper-button-white"></div>
         <div class="swiper-button-prev swiper-button-white"></div>
-    </div>
-    <div class="swiper-container gallery-thumbs">
-        <div class="swiper-wrapper">
-            {% for i in 0..3 %}
-                <div class="swiper-slide">
-                    <img src="http://via.placeholder.com/300x300" alt=""/>
-                </div>
-            {% endfor %}
-        </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
     </div>
 </div>
